WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242199
[iOS 16] All layout tests in fast/events/ios/rotation time out
https://bugs.webkit.org/show_bug.cgi?id=242199
Summary
[iOS 16] All layout tests in fast/events/ios/rotation time out
Wenson Hsieh
Reported
2022-06-30 12:15:28 PDT
rdar://93784344
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-06-30 12:16:00 PDT
This bug tracks making simulated device rotation work again, when running layout tests on iOS 16.
Wenson Hsieh
Comment 2
2022-06-30 12:26:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1957
EWS
Comment 3
2022-06-30 15:26:24 PDT
Committed
252016@main
(b751dd03ccdb): <
https://commits.webkit.org/252016@main
> Reviewed commits have been landed. Closing PR #1957 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug